--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "@mdx-js/loader": "^1.6.22",
+    "@next/mdx": "^10.0.5",
     "@tailwindcss/typography": "^0.4.0",
     "autoprefixer": "^10.2.4",
     "next": "^10.0.5",
