--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@next/mdx": "^12.0.3",
     "@tailwindcss/typography": "^0.4.1",
     "autoprefixer": "^10.4.0",
+    "image-size": "^1.0.0",
     "next": "^12.0.3",
     "next-seo": "^4.28.1",
     "postcss": "^8.3.11",
